tests/typing/bad/testfile-return-4.go
package main

func f(x int) int { if x > 0 { return 1 } }
func main() { }
